--- a/蘑菇街-主页/index.html
+++ b/蘑菇街-主页/index.html
@@ -731,107 +731,113 @@
     </div>
 </div>
 
-<div id="footer-my">
-    <div id="main-f1">
-        <div class="help">
-            <h3>- 新手帮助 -</h3>
-            <ul>
-                <li><a href="">常见问题</a></li>
-                <li><a href="">自动服务</a></li>
-                <li><a href="">联系客服</a></li>
-                <li><a href="">意见反馈</a></li>
-            </ul>
 
-        </div>
-        <div>
-            <h3>- 权益保障 -</h3>
-            <ul>
-                <li><span>全国包邮</span></li>
-                <li><span>7天无理由退货</span></li>
-                <li><span>退货运费补贴</span></li>
-                <li><span>限时发货</span></li>
-            </ul>
+<footer>
+    <div id="footer-my">
+        <div id="main-f1">
+            <div class="help">
+                <h3>- 新手帮助 -</h3>
+                <ul>
+                    <li><a href="">常见问题</a></li>
+                    <li><a href="">自动服务</a></li>
+                    <li><a href="">联系客服</a></li>
+                    <li><a href="">意见反馈</a></li>
+                </ul>
 
-        </div>
-        <div>
-            <h3>- 支付方式 -</h3>
-            <ul>
-                <li><span>微信支付</span></li>
-                <li><span>支付宝</span></li>
-                <li><span>白富美支付</span></li>
-            </ul>
+            </div>
+            <div>
+                <h3>- 权益保障 -</h3>
+                <ul>
+                    <li><span>全国包邮</span></li>
+                    <li><span>7天无理由退货</span></li>
+                    <li><span>退货运费补贴</span></li>
+                    <li><span>限时发货</span></li>
+                </ul>
 
-        </div>
-        <div class="footer-ewm">
-            <h3>- 移动客户端下载 -</h3>
-            <ul>
-                <li>
-                    <span>蘑菇街</span>
-                    <img src="img/footer-ewm.png" alt="">
-                </li>
-                <li>
-                    <span>美丽说</span>
-                    <img src="img/footer-ewm.png" alt="">
-                </li>
-                <li>
-                    <span>uni引力</span>
-                    <img src="img/footer-ewm.png" alt="">
-                </li>
-            </ul>
+            </div>
+            <div>
+                <h3>- 支付方式 -</h3>
+                <ul>
+                    <li><span>微信支付</span></li>
+                    <li><span>支付宝</span></li>
+                    <li><span>白富美支付</span></li>
+                </ul>
 
+            </div>
+            <div class="footer-ewm">
+                <h3>- 移动客户端下载 -</h3>
+                <ul>
+                    <li>
+                        <span>蘑菇街</span>
+                        <img src="img/footer-ewm.png" alt="">
+                    </li>
+                    <li>
+                        <span>美丽说</span>
+                        <img src="img/footer-ewm.png" alt="">
+                    </li>
+                    <li>
+                        <span>uni引力</span>
+                        <img src="img/footer-ewm.png" alt="">
+                    </li>
+                </ul>
+
+            </div>
         </div>
     </div>
-</div>
-<div id="contact">
-    <div id="main-f2">
-        <div class="company">
-            <ul>
-                <li><a href="">招聘信息</a></li>
-                <li><a href="">联系我们</a></li>
-                <li><a href="">商家入驻</a></li>
-                <li><a href="">商家后台</a></li>
-                <li><a href="">蘑菇商学院</a></li>
-                <li><a href="">商家社区</a></li>
-                <li><a href="">规则中心</a></li>
-                <li><a href="">有害信息举报</a></li>
-                <li><p>©2018 Mogujie.com 杭州卷瓜网络有限公司</p></li>
-            </ul>
-        </div>
-        <div class="footer-tel">
-            <div>
-                <span>营业执照：</span>
-                <a href="">913301065526808764</a>
+    <div id="contact">
+        <div id="main-f2">
+            <div class="company">
+                <ul>
+                    <li><a href="">招聘信息</a></li>
+                    <li><a href="">联系我们</a></li>
+                    <li><a href="">商家入驻</a></li>
+                    <li><a href="">商家后台</a></li>
+                    <li><a href="">蘑菇商学院</a></li>
+                    <li><a href="">商家社区</a></li>
+                    <li><a href="">规则中心</a></li>
+                    <li><a href="">有害信息举报</a></li>
+                    <li><p>©2018 Mogujie.com 杭州卷瓜网络有限公司</p></li>
+                </ul>
             </div>
-            <div>
-                <span>网络文化经营许可证：</span>
-                <a href="">浙网文（2016）0349-219号</a>
-            </div>
-            <div>
-                <span>增值电信业务经营许可证：</span>
-                <a href="">浙B2-20110349</a>
-            </div>
-            <div>
-                <a href="">安全责任书</a>
-            </div>
-            <div>
-                <a href="">浙公网安备 33010602002329号</a>
-            </div>
-            <div>
-                <span>互联网药品信息服务资格证书编号：</span>
-                <a href="">（浙)-经营性-2018-0002</a>
-            </div>
-            <div>
-                <a href="">浙网食A33010003</a>
-            </div>
-            <div>
-                <a href="">出版物网络交易平台服务经营备案证</a>
-            </div>
-            <div>
-                <a href="">（浙）网械平台备字[2018]第00006号</a>
-            </div>
+            <div class="footer-tel">
+                <div>
+                    <span>营业执照：</span>
+                    <a href="">913301065526808764</a>
+                </div>
+                <div>
+                    <span>网络文化经营许可证：</span>
+                    <a href="">浙网文（2016）0349-219号</a>
+                </div>
+                <div>
+                    <span>增值电信业务经营许可证：</span>
+                    <a href="">浙B2-20110349</a>
+                </div>
+                <div>
+                    <a href="">安全责任书</a>
+                </div>
+                <div>
+                    <a href="">浙公网安备 33010602002329号</a>
+                </div>
+                <div>
+                    <span>互联网药品信息服务资格证书编号：</span>
+                    <a href="">（浙)-经营性-2018-0002</a>
+                </div>
+                <div>
+                    <a href="">浙网食A33010003</a>
+                </div>
+                <div>
+                    <a href="">出版物网络交易平台服务经营备案证</a>
+                </div>
+                <div>
+                    <a href="">（浙）网械平台备字[2018]第00006号</a>
+                </div>
 
+            </div>
         </div>
+
     </div>
+</footer>
+<div class="rightBox">
 
 </div>
 <div class="right_navigation">
@@ -953,46 +959,26 @@
 <script src="js/animate.js"></script>
 <script src="js/index.js"></script>
 <script>
-function boka() {
-    let fixedtop = document.getElementsByClassName('sideBottom')[0];
 
-
-    let winH=document.documentElement.clientHeight||document.body.clientHeight;
-    let bok = false;
-    window.onscroll = function () {
-        // if (bok) {
-        //     clearInterval(fixedtop.timer)
-        // }
-        // bok = true;
-        let winScroll = document.documentElement.scrollTop||document.body.scrollTop;
-        let winClient = document.documentElement.clientHeight||document.body.clientHeight;
-        if (winScroll >= 0) {
-            fixedtop.style.display = 'block';
-        } else {
-            fixedtop.style.display = 'none';
+function sideBottomUp() {
+    let $sideBottom=$('.sideBottom');
+    $(window).scroll(function () {
+        let T = $(window).scrollTop();
+        if(T>0){
+            $sideBottom.css({display:'block'})
         }
-    };
-    fixedtop.onclick = function () {
-        document.documentElement.scrollTop=0;
-        document.body.scrollTop=0;
-        /* let winScroll =  document.documentElement.scrollTop||document.body.scrollTop;
-         this.timer = setInterval(() => {
-         winScroll -= 500;
-         if (winScroll <= 0) {
-         clearInterval(this.timer);
-         document.documentElement.scrollTop=0;
-         document.body.scrollTop=0;
-         return;
-         }
-         document.documentElement.scrollTop=winScroll
-         ;document.body.scrollTop=winScroll;
-         bok = false;
-         }, 17);*/
-    };
 
+        if(T<=2){
+            $sideBottom.css({display:"none"});
+        }
+    });
+    $sideBottom.on('click',function () {
+        $('html , body').animate({scrollTop: 0});
 
+    })
 }
-       boka()
+sideBottomUp();
+
 
 </script>
 <script>
